--- a/Teste2/Teste2.csproj
+++ b/Teste2/Teste2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4A7B875-2FBD-4ECD-BA7C-93076029FD44}</ProjectGuid>
+    <ProjectGuid>{48CBF77A-6083-4CEB-8CE7-DC93023EF5A0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Study</RootNamespace>
-    <AssemblyName>Study</AssemblyName>
+    <RootNamespace>Teste2</RootNamespace>
+    <AssemblyName>Teste2</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,38 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AngularProgrammer.cs" />
-    <Compile Include="Collections\Arrays.cs" />
-    <Compile Include="Collections\DIctionaries.cs" />
-    <Compile Include="Collections\Generics.cs" />
-    <Compile Include="Collections\IEnumerables.cs" />
-    <Compile Include="Collections\Lists.cs" />
-    <Compile Include="Computer.cs" />
-    <Compile Include="CPlusPlusProgrammer.cs" />
-    <Compile Include="CSharpProgrammer.cs" />
-    <Compile Include="Employee.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="ILikeTo.cs" />
-    <Compile Include="ImpostoPIS.cs" />
-    <Compile Include="IWebDeveloper.cs" />
-    <Compile Include="JavaProgrammer.cs" />
-    <Compile Include="JavaScriptDeveloper.cs" />
-    <Compile Include="Language.cs" />
-    <Compile Include="MacBook.cs" />
-    <Compile Include="NodeDeveloper.cs" />
-    <Compile Include="OOProgrammer.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Programmer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringInterna.cs" />
-    <Compile Include="Students\ThiagoJordan.cs" />
-    <Compile Include="TypeScriptProgrammer.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Study\Study.csproj">
+      <Project>{f4a7b875-2fbd-4ecd-ba7c-93076029fd44}</Project>
+      <Name>Study</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
