--- a/AirportTest/AirportTest.csproj
+++ b/AirportTest/AirportTest.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F4A7B875-2FBD-4ECD-BA7C-93076029FD44}</ProjectGuid>
+    <ProjectGuid>{900E1B71-9C80-45A8-9706-351E6C4DE4C1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Study</RootNamespace>
-    <AssemblyName>Study</AssemblyName>
+    <RootNamespace>AirportTest</RootNamespace>
+    <AssemblyName>AirportTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,9 +42,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SqlClient, Version=4.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Data.SqlClient.4.6.0\lib\net461\System.Data.SqlClient.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,55 +50,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AngularProgrammer.cs" />
-    <Compile Include="Collections\Arrays.cs" />
-    <Compile Include="Collections\DIctionaries.cs" />
-    <Compile Include="Collections\Generics.cs" />
-    <Compile Include="Collections\IEnumerables.cs" />
-    <Compile Include="Collections\Lists.cs" />
-    <Compile Include="Computer.cs" />
-    <Compile Include="CPlusPlusProgrammer.cs" />
-    <Compile Include="CSharpProgrammer.cs" />
-    <Compile Include="DatabaseDeveloperAttribute.cs" />
-    <Compile Include="Employee.cs" />
-    <Compile Include="Exemplos.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="ILikeTo.cs" />
-    <Compile Include="ImpostoPIS.cs" />
-    <Compile Include="IWebDeveloper.cs" />
-    <Compile Include="JavaProgrammer.cs" />
-    <Compile Include="JavaScriptDeveloper.cs" />
-    <Compile Include="Language.cs" />
-    <Compile Include="MacBook.cs" />
-    <Compile Include="NodeDeveloper.cs" />
-    <Compile Include="OOProgrammer.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="AirportContext.cs" />
+    <Compile Include="Airport.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Programmer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringInterna.cs" />
-    <Compile Include="Students\ThiagoJordan.cs" />
-    <Compile Include="Students\LucasBlasifera.cs" />
-    <Compile Include="TypeScriptProgrammer.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AutomotivoFramework\AutomotivoFramework.csproj">
-      <Project>{2cd1525c-01b8-46de-bf81-dfac3d53b6b6}</Project>
-      <Name>AutomotivoFramework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Automotivo\Automotivo.csproj">
-      <Project>{ab441147-f743-4462-9b17-b28aa25f3ecd}</Project>
-      <Name>Automotivo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj">
-      <Project>{a11818c3-c067-4d3a-813b-4a210bd93d13}</Project>
-      <Name>DataAccess</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
